feat(skill): 브루저·서스테이너 스킬을 패시브/액티브로 분리하고 프리셋 매핑에 반영